# dde-calendar

./: .gitmodules  CMakeLists.txt  README.md  README.zh_CN.md  linglong.yaml
.tx/: config
DDav/: CMakeLists.txt
calendar-common/: CMakeLists.txt
calendar-common/src/: dschedule.cpp  dschedulequerypar.h
calendar-common/src/pinyin/: pinyinsearch.cpp
dde-online-accounts/doa-daemon/: CMakeLists.txt
dde-online-accounts/doa-daemon/assets/: com.dde.onlineaccount.service  dde-online-accounts-daemon.service
dde-online-accounts/doa-daemon/src/app/: doa_daemon.cpp
dde-online-accounts/doa-daemon/src/controller/: accountdbmanager.cpp  accountdbmanager.h  doamanager.cpp  doamanager.h  doaqqprovider.cpp  doaqqprovider.h
dde-online-accounts/doa-daemon/src/db/: account_result.h  accountdb.cpp  accountdb.h
dde-online-accounts/doa-daemon/src/dbus/: dbus_consts.cpp  dbus_consts.h  doa_notify_proxy.cpp  doa_notify_proxy.h  doaaccountmanager.cpp  doaaccountmanager.h  doaaccounts_adapter.cpp  doaaccounts_adapter.h  doaaccountscalendar_adapter.cpp  doaaccountscalendar_adapter.h  doaaccountspasswordadapter.cpp  doaaccountspasswordadapter.h
debian/: rules  (+3 more)
tests/: CMakeLists.txt  cmake-lcov-test.sh  test-prj-running.sh
tests/dde-calendar-client-test/: CMakeLists.txt
tests/dde-calendar-client-test/src/: cscheduledbusstub.cpp  cscheduledbusstub.h  testscheduledata.cpp  testscheduledata.h  ut_configsettings.cpp  ut_configsettings.h  ut_cscheduleoperation.cpp  ut_cscheduleoperation.h  ut_shortcut.cpp  ut_shortcut.h  ut_tabletconfig.cpp  ut_tabletconfig.h
tests/dde-calendar-client-test/src/test_customWidget/: test_monthbrefwidget.cpp  test_monthbrefwidget.h  test_scheduleremindwidget.cpp  test_scheduleview.cpp  test_timeedit.cpp  test_todaybutton.cpp
tests/dde-calendar-client-test/src/test_dialog/: test_scheduledlg.cpp
tests/dde-calendar-client-test/src/test_keypress/: test_ckeyenabledeal.cpp
tests/dde-calendar-client-test/src/test_view/: test_alldayeventview.cpp  test_alldayeventview.h  test_graphicsview.cpp  test_graphicsview.h  test_monthgraphiview.cpp  test_monthgraphiview.h
tests/dde-calendar-client-test/src/test_widget/: test_schedulesearchview.cpp
tests/dde-calendar-client-test/src/test_widget/test_weekWidget/: test_weekwindow.h
tests/dde-calendar-client-test/src/test_widget/test_yearWidget/: test_yearview.cpp  test_yearview.h  test_yearwindow.cpp  test_yearwindow.h
tests/dde-calendar-client-test/src/ut_customWidget/: ut_animationstackedwidget.cpp  ut_animationstackedwidget.h  ut_ccustomtimeedit.cpp  ut_ccustomtimeedit.h  ut_cdynamicicon.cpp  ut_cdynamicicon.h  ut_customframe.cpp  ut_customframe.h  ut_monthbrefwidget.cpp  ut_monthbrefwidget.h  ut_scheduleremindwidget.cpp  ut_scheduleremindwidget.h  ut_scheduleview.cpp  ut_scheduleview.h  ut_timeedit.cpp  ut_timeedit.h  ut_titlewidget.cpp  ut_titlewidget.h  ut_todaybutton.cpp  ut_todaybutton.h
tests/dde-calendar-client-test/src/ut_dataManage/: ut_calendardatedatamanage.cpp  ut_calendardatedatamanage.h  ut_schedulecoormanage.cpp  ut_schedulecoormanage.h  ut_scheduledatamanage.cpp  ut_scheduledatamanage.h
tests/dde-calendar-client-test/src/ut_dialog/: ut_myscheduleview.cpp  ut_myscheduleview.h  ut_schedulectrldlg.cpp  ut_schedulectrldlg.h  ut_scheduledlg.cpp  ut_scheduledlg.h
tests/dde-calendar-client-test/src/ut_keypress/: ut_calldaykeyleftdeal.cpp  ut_calldaykeyleftdeal.h  ut_calldaykeyrightdeal.cpp  ut_calldaykeyrightdeal.h  ut_ckeydowndeal.cpp  ut_ckeydowndeal.h  ut_ckeyenabledeal.cpp  ut_ckeyenabledeal.h  ut_ckeyleftdeal.cpp  ut_ckeyleftdeal.h  ut_ckeypressprxy.cpp  ut_ckeypressprxy.h  ut_ckeyrightdeal.cpp  ut_ckeyrightdeal.h  ut_ckeyupdeal.cpp  ut_ckeyupdeal.h  ut_cscenetabkeydeal.cpp  ut_cscenetabkeydeal.h  ut_cweekdayscenetabkeydeal.cpp  ut_cweekdayscenetabkeydeal.h
tests/dde-calendar-client-test/src/ut_view/: ut_alldayeventview.cpp  ut_alldayeventview.h  ut_calldayscheduleitem.cpp  ut_calldayscheduleitem.h  ut_cweekdaybackgrounditem.cpp  ut_cweekdaybackgrounditem.h  ut_graphicsscene.cpp  ut_graphicsscene.h  ut_graphicsview.cpp  ut_graphicsview.h  ut_monthgraphiview.cpp  ut_monthgraphiview.h  ut_scheduleitem.cpp  ut_scheduleitem.h
tests/dde-calendar-client-test/src/ut_widget/: ut_schedulesearchview.cpp  ut_schedulesearchview.h  ut_touchgestureoperation.cpp  ut_touchgestureoperation.h
tests/dde-calendar-client-test/src/ut_widget/ut_dayWidget/: ut_dayhuangliview.cpp  ut_dayhuangliview.h  ut_daymonthview.cpp  ut_daymonthview.h  ut_daywindow.cpp  ut_daywindow.h
tests/dde-calendar-service-test/: CMakeLists.txt
tests/dde-calendar-service-test/src/: test_calendarhuangli.cpp  test_calendarscheduler.cpp  test_calendarscheduler.h  test_calendarservice.cpp  test_calendarservice.h  test_jobremindmanager.cpp  test_jobremindmanager.h  ut_calendarhuangli.cpp  ut_calendarhuangli.h  ut_calendarscheduler.cpp  ut_calendarscheduler.h  ut_calendarservice.cpp  ut_calendarservice.h  ut_jobremindmanager.cpp  ut_jobremindmanager.h
tests/dde-calendar-service-test/src/test_dbmanager/: sqldatabase_stub.cpp  sqldatabase_stub.h  sqlquery_stub.cpp  sqlquery_stub.h  test_huanglidatabase.cpp  test_huanglidatabase.h  test_schedulerdatabase.cpp  test_schedulerdatabase.h  ut_huanglidatabase.cpp  ut_huanglidatabase.h  ut_schedulerdatabase.cpp  ut_schedulerdatabase.h
tests/dde-calendar-service-test/src/test_lunarandfestival/: ut_method_interface.cpp  ut_method_interface.h
tests/dde-online-accounts-test/: CMakeLists.txt
tests/dde-online-accounts-test/dde-online-accounts-daemon-test/: CMakeLists.txt
tests/dde-online-accounts-test/dde-online-accounts-lib-test/: CMakeLists.txt
tests/dde-online-accounts-test/dde-online-accounts-lib-test/src/: ut_aesencryption.cpp  ut_aesencryption.h  ut_doadataconversion.cpp  ut_doadataconversion.h  ut_doaprovider.cpp  ut_doaprovider.h  ut_qjsonutils.cpp  ut_qjsonutils.h  ut_utils.cpp  ut_utils.h
tests/dde-online-accounts-test/dde-online-accounts-plugin-test/: CMakeLists.txt
tests/dde-online-accounts-test/dde-online-accounts-plugin-test/src/: ut_doaonlineaccount.cpp  ut_doaonlineaccount.h
(+370 files in other folders)
